--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL = http://e-khayetli.runasp.net/api
-VITE_IMAGE_API_URL= http://e-khayetli.runasp.net
+VITE_API_URL = https://e-khayetli.runasp.net/api
+VITE_IMAGE_API_URL= https://e-khayetli.runasp.net
